[package]
name = "tokio-smoltcp"
version = "0.3.1"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"
description = "An asynchronous wrapper for smoltcp."
documentation = "https://docs.rs/tokio-smoltcp/"
homepage = "https://github.com/spacemeowx2/tokio-smoltcp"
repository = "https://github.com/spacemeowx2/tokio-smoltcp.git"
keywords = ["async", "smoltcp", "tokio"]
categories = ["asynchronous", "network-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
futures = "0.3"
pin-project-lite = "0.2.6"
tokio = { version = "1.6.1", features = ["time", "rt"] }
tokio-util = "0.7.4"
parking_lot = "0.12.0"

[dependencies.smoltcp]
version = "0.10.0"
default-features = false
features = [
    "std",
    "async",
    "socket-tcp",
    "socket-udp",
    "socket-raw",
    "medium-ethernet",
    "medium-ip",
]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
pcap = "1.0.0"
structopt = "0.3"
dns-parser = "0.8"
rand = "0.8.5"

[features]
default = ["proto-ipv4", "proto-ipv6", "raw_socket"]
proto-ipv4 = ["smoltcp/proto-ipv4"]
proto-ipv6 = ["smoltcp/proto-ipv6"]
raw_socket = ["smoltcp/socket-raw"]

[[example]]
name = "pcap"
